@@ -63,8 +63,11 @@ struct SequenceErrorCountsPosProcessor : public starling_pos_processor_base
 private:
 
     void
-    process_pos_variants_impl(const pos_t pos) override
+    process_pos_variants_impl(
+        const pos_t pos,
+        const bool isPosPrecedingReportableRange) override
     {
+        if (isPosPrecedingReportableRange) return;
         process_pos_error_counts(pos);
     }
 
