@@ -63,7 +63,9 @@ struct strelka_pos_processor : public starling_pos_processor_base
 private:
 
     void
-    process_pos_variants_impl(const pos_t pos) override;
+    process_pos_variants_impl(
+        const pos_t pos,
+        const bool isPosPrecedingReportableRange) override;
 
     void
     process_pos_snp_somatic(const pos_t pos);
