@@ -51,8 +51,11 @@ struct snoise_pos_processor : public starling_pos_processor_base
 
 private:
     void
-    process_pos_variants_impl(const pos_t pos) override
+    process_pos_variants_impl(
+        const pos_t pos,
+        const bool isPosPrecedingReportableRange) override
     {
+        if (isPosPrecedingReportableRange) return;
         process_pos_snp_snoise(pos);
     }
 
